# greppy

./: .gitignore  Cargo.toml  LICENSE  README.md  rustfmt.toml
.codecrafters/: compile.sh  run.sh
.github/workflows/: rust.yaml
greppy/: Cargo.toml
greppy/src/: main.rs
matcher/: Cargo.toml
matcher/src/: lib.rs  size_hint.rs  validation.rs
regex/: Cargo.toml
regex/src/: lexer.rs  lib.rs  parser.rs
src/: error.rs  expression.rs  lib.rs  main.rs  matcher.rs  regex.rs  size_hint.rs  solver.rs  validation.rs
src/matcher/: validation.rs
src/regex/: error.rs  lexer.rs  mod.rs  parser.rs
