[workspace]
resolver = "3"
members = ["regex", "greppy", "matcher"]

[workspace.package]
version = "0.1.0"
authors = ["Gustavo Batistela @gustavobat"]
edition = "2024"
rust-version = "1.88"

[workspace.dependencies]
clap = { version = "4.5.42", features = ["derive"] }
matcher = { path = "matcher" }
regex = { path = "regex" }
test-case = "3.3.1"
thiserror = "2.0.12"